tests/e2e/semantics/head_const_output8.story
when client listen method:"post" path:"/foo" as res
    v = res
    v["foo"] = 2
